# TatSu

./: .editorconfig  .envrc.xsh  .gitignore  .pylintrc  .travis.yml  .vale.ini  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CLING.md  GEMINI.md  Justfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  RULES.md  __old_README.md  bitbucket-pipelines.yml  circle.yml  config.toml  index.html  invoke_tasks.py  mypy.ini  pyproject.toml  pyrightconfig.json  readthedocs.yaml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.deprecated/: objectmodel.py  requirements-dev.txt  requirements-test.txt  semantics.py
.github/: FUNDING.yml
.github/workflows/: codspeed.yml  default.yml  publish.yml  test_publish.html  test_publish.yml
.obsidian/: core-plugins.json  workspace.json
backups/: mkdocs_readthedocs.yaml
changelog/: CHANGELOG_v5.17.0.md  CHANGELOG_v5.18.0.md
deprecated/: tox.ini
docs/: CONTRIBUTING.rst  LICENSE.txt  accept.txt  antlr.rst  asjson.rst  ast.rst  changelog.rst  conf.py  config.rst  contributing.rst  contributors.rst  credits.rst  declarative_translation.rst  directives.rst  examples.rst  grako.rst  index.rst  install.rst  intro.rst  left_recursion.rst  license.rst  links.rst  links_contributors.rst  make.bat  mini-tutorial.rst  models.rst  parserconfig.rst  print_translation.rst  rationale.rst  roles.rst  semantics.rst  support.rst  syntax.rst  tatsu-docs-rus.md  templates_translation.rst  traces.rst  translation.rst  use.rst
docs/changelog/: CHANGELOG_v5.17.0.rst  CHANGELOG_v5.18.0.rst  CHANGELOG_v5.18.1.md  CHANGELOG_v5.19.0.md  CHANGELOG_v5.19.1.md  CHANGELOG_v5.20.0.md  CHANGELOG_v5.20.1.md  CHANGELOG_v5.21.0.md  CHANGELOG_v5.21.1.md  CHANGELOG_v5.22.0.md  CHANGELOG_v5.22.1 md  CHANGELOG_v5.22.1.md  CHANGELOG_v5.22.2.md  CHANGELOG_v5.23.0.md  CHANGELOG_v5.23.1.md  CHANGELOG_v5.24.0.md  links.rst  links_contributors.rst
draft/: argparsetree.py  background.py  forward.py  framecontext.py  iterator_ipc.py  ns.py  parchoicenew.py  punctuation_re.py  queue_ipc.py  trees.py  zipascii.py
draft/multibar/: thread_multibar.py
dsgn/: CLING.md  FROMJSON.md
etc/: NUMBER.md  README.dev  RICH_MARKUP.md  color.md
etc/sublime/: tatsu.YAML-tmLanguage  tatsu.tmLanguage
examples/calc/: Makefile  README.md  README.rst  calc.py  codegen.py  input.txt  model.py
examples/g2e/: Makefile  README.rst  antlr_parser.py  g2e.py  python.ebnf  python3.ebnf  semantics.py
examples/regex/: Makefile  README.rst  genparser.py  model.py  parser_base.py  regex.ebnf  regex_parser.py  test.py
grammar/: calc.json  calctree.json  ebnf.tatsu  javatree.json  pretty.tatsu  tatsu.ebnf  tatsu.json  tatsu.tatsu  tatsumodel.json  tatsumodel.py  tatsutree.json  vbtree.json
media/: demo.py  demo.rst  demo.tape
mkdocs/: mkdocs.yml
mkdocs/docs/: Makefile  antlr.md  ast.md  conf.py  contributing.md  contributors.md  credits.md  directives.md  examples.md  index.md  install.md  intro.md  left_recursion.md  license.md  links.md  links_contributors.md  make.bat  mini-tutorial.md  models.md  parserconfig.md  rationale.md  semantics.md  support.md  syntax.md  traces.md  translation.md  use.md
ng/: argparsetree.py  asynciopool.py  colors.py  format_annotation.py  forward.py  fromany.py  levels.md  lisp.py  logging.py  ngboot.py  parchoice.py  parchoicenew.py  str_inherit.py  trees.py
ng/lisp/: __init__.py  lisp.py  lisp.tatsu  parser.py
ng/multibar/: asyncio_bars.py  asyncio_bars_2.py  lowprio_multibar.py  multibar_bar.py  multibar_render.py  no_lock.py  style_bar.py  style_multibar.py
ng/ngtokenizing/: buffer.py  cursor.py  null.py  textlines.py  tokenizer.py
scripts/: asjsonmodel.json  benchmark_parser.py  calcmodel.py  calcmodel.pynofmt  clean_parse.py  export_model_to_rust.py  ideps.py  md2man.py  md2txt.py  parselog.py  print_grammar.py  print_grammar_json.py  railroads.py  rustexport.py  sphinx_to_mkdocs.py
scripts/githooks/: commit-msg.py  pre-commit.py
tatsu/: __init__.py  __main__.py  _config.py  _grammar.py  _grammar.tatsu  _model.py  _tatsu.ebnf  _tatsu.tatsu  _unicode_characters.py  _version.py  api.py  ast.py  bootstrap.py  buffering.py  builder.py  collections.py  color.py  config.py  containers.py  contexts.py  decorators.py  diagrams.py  exceptions.py  grammars.py  infos.py  invoke_tasks.py  leftrec.py  model.py  ngleftrec.py  objectmodel.py  parser.py  parser_semantics.py  parserconfig.py  parsing.py  pygraphviz_diagrams.py  railroads.py  rendering.py  semantics.py  setuptools.py  symtables.py  (+7 more)
tatsu/api/: __init__.py  api.py
tatsu/barz/: __init__.py  bar.py  broker.py  col.py  escapes.py  main.py  metrics.py  multi.py  row.py
tatsu/boot/: __init__.py  boot.py  bootparser.py  bootstrap.py
tatsu/cling/: __init__.py  __main__.py  boot_cmd.py  cli.py  fmt.py  lib.py  run_cmd.py  run_opt.py
tatsu/codegen/: __init__.py  cgbase.py  genmodel.py  genpython.py  modelgen.py  objectmodel.py  python.py  pythongen.py  rendering.py
tatsu/collections/: __init__.py  boundeddict.py  lrudict.py  orderedset.py  tail.py
tatsu/contexts/: __init__.py  _base.py  _core.py  _engine.py  _protocol.py  ast.py  context.py  core.py  cst.py  ctx.py  decorator.py  engine.py  infos.py  memento.py  parsecontext.py  parsestate.py  protocol.py  state.py  sts.py  tracing.py
tatsu/g2e/: antlr.ebnf  (+7 more)
tatsurd/: LICENSE  README.md  example.py  tatsurd.py
test/: __init__.py  __main__.py  ast_test.py  buffering_test.py  codegen_test.py  diagram_test.py  issue_62_test_ebnf.txt  issue_62_test_input.txt  misc_test.py  model_test.py  parser_equivalence_test.py  parsing_test.py  pickle_test.py  test_codegen.py  walker_test.py
tests/: ast_test.py  bootstrap_test.py  buffering_test.py  cli_test.py  cling_test.py  codegen_test.py  diagram_test.py  exceptions_test.py  fixtures.py  g2e_test.py  json_import_test.py  model_test.py  ngmodel_test.py  parser_equivalence_test.py  parsing_test.py  pickle_test.py  railroads_test.py  tree_test.py  walker_test.py  z_bootstrap_test.py
(+355 files in other folders)
