# Copyright (c) 2017-2026 Juancarlo Añez (apalala@gmail.com)
# SPDX-License-Identifier: BSD-4-Clause
# by Gemini 2026-02-13

[build-system]
# We use hatchling as the engine, which is decoupled from the hatch CLI
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TatSu"
dynamic = ["version"]
authors = [{name = "Juancarlo Añez", email = "apalala@gmail.com"}]
description = "TatSu takes a grammar in a variation of EBNF as input, and outputs a memoizing PEG/Packrat parser in Python."
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["PEG", "parser", "grammar", "EBNF", "packrat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
]
dependencies = []

[project.optional-dependencies]
colorization = ["colorama"]
parproc = ["rich"]

[dependency-groups]
dev = [
    "build",
    "colorama",
    "graphviz",
    "ipython",
    "progress",
    "psutil",
    "rich",
    "rst2html5",
    "twine",
    "uv",
]
test = [
    "basedpyright",
    "nodejs-wheel-binaries<=24",
    "colorama",
    "graphviz",
    "mypy",
    "progress",
    "psutil",
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "pytest-rerunfailures",
    "pytest-xdist",
    "rich",
    "ruff",
    "ty",
]
doc = [
    "docutils",
    "sphinx",
    "sphinx-autodoc2",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "pydata-sphinx-theme",
    "myst-parser",
]
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "pymdown-extensions",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-macros-plugin",
]

[project.scripts]
tatsu = "tatsu:main"
g2e = "tatsu.g2e:main"

[project.urls]
Homepage = "https://github.com/neogeny/TatSu"
Repository = "https://github.com/neogeny/TatSu"
Documentation = "https://tatsu.readthedocs.io/en/stable/"

[tool.hatch.version]
# Telling Hatchling exactly where to find the version string
path = "tatsu/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["tatsu"]

[tool.hatch.build.targets.sdist]
exclude = ["/backup", "/parsers", "/deprecated"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
addopts = "-q --ignore=.venv -p no:logging"
testpaths = ["tests"]
norecursedirs = ["*.egg", ".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.14"
exclude = "backup|parsers|docs|dist|build|tmp"
ignore_missing_imports = true

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.rules]
unresolved-import = "ignore"
unused-ignore-comment = "ignore"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "dist"]

[tool.coverage.run]
omit = ["tests/*", "tatsu/diagrams.py", "tatsu/codegen/*", "**/test.py"]
data_file = ".cache/coverage/.coverage"
