[metadata]
name = TatSu
author = Juancarlo Añez
author_email = apalala@gmail.com
maintainer = Juancarlo Añez
maintainer_email = apalala@gmail.com
license = BSD-2-Clause
description = TatSu takes a grammar in a variation of EBNF as input, and outputs a memoizing PEG/Packrat parser in Python.
url = https://github.com/neogeny/tatsu
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Text Processing :: General

[options]
packages = find:
zip_safe = False
setup_requires = setuptools>=44; wheel; toml; read_version[toml]
include_package_data = True
python_requires = >=3.8
tests_require = pytest-mypy; pytest-runner

[options.entry_points]
console_scripts =
    tatsu = tatsu:main
    g2e = tatsu.g2e:main

[options.extras_require]
future-regex = regex

[bdist_wheel]
universal = 1

[aliases]
test = pytest
